@@ -180,7 +180,7 @@ public class JavaContainerSetSlotTranslator extends PacketTranslator<Clientbound
             session.getCraftingRecipes().put(newRecipeId, geyserRecipe);
 
             CraftingDataPacket craftPacket = new CraftingDataPacket();
-            craftPacket.getCraftingData().add(geyserRecipe.asRecipeData(session).get(0));
+            craftPacket.getCraftingData().add(geyserRecipe.asRecipeData(session).getFirst());
             session.sendUpstreamPacket(craftPacket);
 
             index = 0;
@@ -245,7 +245,7 @@ public class JavaContainerSetSlotTranslator extends PacketTranslator<Clientbound
             session.getSmithingRecipes().add(geyserRecipe);
 
             CraftingDataPacket craftPacket = new CraftingDataPacket();
-            craftPacket.getCraftingData().add(geyserRecipe.asRecipeData(session).get(0));
+            craftPacket.getCraftingData().add(geyserRecipe.asRecipeData(session).getFirst());
             session.sendUpstreamPacket(craftPacket);
 
             // Just set one of the slots to air, then right back to its proper item.
