@@ -25,6 +25,7 @@
 
 package org.geysermc.geyser.util;
 
+import net.kyori.adventure.key.Key;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.cloudburstmc.math.vector.Vector3i;
 import org.cloudburstmc.nbt.NbtMap;
@@ -55,13 +56,18 @@ import org.geysermc.geyser.text.ChatColor;
 import org.geysermc.geyser.text.GeyserLocale;
 import org.geysermc.geyser.translator.protocol.java.inventory.JavaMerchantOffersTranslator;
 import org.geysermc.mcprotocollib.protocol.data.game.item.ItemStack;
+import org.geysermc.mcprotocollib.protocol.data.game.item.component.DataComponentType;
+import org.geysermc.mcprotocollib.protocol.data.game.item.component.DataComponentTypes;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.DataComponents;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.CompositeSlotDisplay;
+import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.DyedSlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.EmptySlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.ItemSlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.ItemStackSlotDisplay;
+import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.OnlyWithComponentSlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.SlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.TagSlotDisplay;
+import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.WithAnyPotionSlotDisplay;
 import org.geysermc.mcprotocollib.protocol.data.game.recipe.display.slot.WithRemainderSlotDisplay;
 import org.geysermc.mcprotocollib.protocol.packet.ingame.clientbound.inventory.ClientboundOpenBookPacket;
 import org.geysermc.mcprotocollib.protocol.packet.ingame.serverbound.inventory.ServerboundContainerClosePacket;
@@ -357,29 +363,50 @@ public class InventoryUtils {
      * Returns if the provided item stack would be accepted by the slot display.
      */
     public static boolean acceptsAsInput(GeyserSession session, SlotDisplay slotDisplay, GeyserItemStack itemStack) {
+        // TODO possible code duplication with RecipeUtil#translateToInput
         if (slotDisplay instanceof EmptySlotDisplay) {
             return itemStack.isEmpty();
         }
-        if (slotDisplay instanceof CompositeSlotDisplay compositeSlotDisplay) {
-            if (compositeSlotDisplay.contents().size() == 1) {
-                return acceptsAsInput(session, compositeSlotDisplay.contents().get(0), itemStack);
+        if (slotDisplay instanceof CompositeSlotDisplay(List<SlotDisplay> contents)) {
+            if (contents.size() == 1) {
+                return acceptsAsInput(session, contents.getFirst(), itemStack);
             }
-            return compositeSlotDisplay.contents().stream().anyMatch(aSlotDisplay -> acceptsAsInput(session, aSlotDisplay, itemStack));
+            return contents.stream().anyMatch(aSlotDisplay -> acceptsAsInput(session, aSlotDisplay, itemStack));
         }
         if (slotDisplay instanceof WithRemainderSlotDisplay remainderSlotDisplay) {
             return acceptsAsInput(session, remainderSlotDisplay.input(), itemStack);
         }
-        if (slotDisplay instanceof ItemSlotDisplay itemSlotDisplay) {
-            return itemStack.getJavaId() == itemSlotDisplay.item();
+        if (slotDisplay instanceof ItemSlotDisplay(int item)) {
+            return itemStack.getJavaId() == item;
         }
-        if (slotDisplay instanceof ItemStackSlotDisplay itemStackSlotDisplay) {
-            ItemStack other = itemStackSlotDisplay.itemStack();
+        if (slotDisplay instanceof ItemStackSlotDisplay(ItemStack other)) {
             // Amount check might be flimsy?
             return itemStack.getJavaId() == other.getId() && itemStack.getAmount() >= other.getAmount()
                 && Objects.equals(itemStack.getComponents(), other.getDataComponentsPatch());
         }
-        if (slotDisplay instanceof TagSlotDisplay tagSlotDisplay) {
-            return itemStack.is(session, new Tag<>(JavaRegistries.ITEM, tagSlotDisplay.tag()));
+        if (slotDisplay instanceof TagSlotDisplay(Key tag)) {
+            return itemStack.is(session, new Tag<>(JavaRegistries.ITEM, tag));
+        }
+        if (slotDisplay instanceof OnlyWithComponentSlotDisplay(SlotDisplay source, DataComponentType<?> component)) {
+            return itemStack.has(component) && acceptsAsInput(session, source, itemStack);
+        }
+        if (slotDisplay instanceof DyedSlotDisplay(SlotDisplay ignored, SlotDisplay target)) {
+            return acceptsAsInput(session, target, itemStack);
+        }
+        if (slotDisplay instanceof WithAnyPotionSlotDisplay(SlotDisplay display)) {
+            if (display instanceof ItemStackSlotDisplay(ItemStack stack)) {
+                DataComponents clonedComponents = stack.getDataComponentsPatch() == null ? null : stack.getDataComponentsPatch().clone();
+                if (clonedComponents != null) {
+                    clonedComponents.remove(DataComponentTypes.POTION_CONTENTS);
+                }
+                ItemStack stackWithoutPotions = new ItemStack(stack.getId(), stack.getAmount(), clonedComponents);
+                GeyserItemStack originalWithoutPotions = itemStack.copy();
+                if (originalWithoutPotions.getComponents() != null) {
+                    originalWithoutPotions.getComponents().remove(DataComponentTypes.POTION_CONTENTS);
+                }
+                return acceptsAsInput(session, new ItemStackSlotDisplay(stackWithoutPotions), originalWithoutPotions);
+            }
+            return acceptsAsInput(session, display, itemStack);
         }
         session.getGeyser().getLogger().warning("Unknown slot display type: " + slotDisplay);
         return false;
